Add 1.0.58 of SALTS to Repo

--- a/plugin.video.salts/resources/language/English/strings.po
+++ b/plugin.video.salts/resources/language/English/strings.po
@@ -874,6 +874,14 @@ msgctxt "#30214"
 msgid "on"
 msgstr ""
 
+msgctxt "#30215"
+msgid "Delete Bookmark"
+msgstr ""
+
+msgctxt "#30216"
+msgid "Bookmark Deleted"
+msgstr ""
+
 msgctxt "#30500"
 msgid "Addon Theme"
 msgstr ""
