--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,20 @@
+[B]Version 1.0.58[/B]
+- Add delete trakt bookmark function
+- Fix trakt resume when 0
+- Improve sezon scraper
+- Improve alluc scraper
+- Improve dd.tv scraper
+- Fix dizigold scraper
+- Fix movietv.to scraper
+- Fix moviesonline7 scraper
+- Fix mintmovies scraper
+- Fix pubfilm scraper
+- Fix 2movies scraper
+- Fix flixanity scraper
+- Fix zumvo scraper
+- Fix/Improve xmovies8  scraper
+- Fix exception when runtime is None
+
 [B]Version 1.0.57[/B]
 - Add putlocker scraper
 - Add yshows scraper
