--- a/plugin.video.salts/resources/language/English/strings.po
+++ b/plugin.video.salts/resources/language/English/strings.po
@@ -882,6 +882,10 @@ msgctxt "#30216"
 msgid "Bookmark Deleted"
 msgstr ""
 
+msgctxt "#30217"
+msgid "Force No Match"
+msgstr ""
+
 msgctxt "#30500"
 msgid "Addon Theme"
 msgstr ""
