--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,12 @@
+[B]Version 1.0.62[/B]
+- Allow caching of data in url requests
+- Add option to Force No Match
+- Update quality settings for IceFilms
+- Fix yify-streaming scraper
+- Fix view47 scraper
+- Fix popcorntime scraper
+- Make shush scraper private
+
 [B]Version 1.0.61[/B]
 - Fix 2movies scraper
 - Fix popcorntimefree scraper
