--- a/plugin.video.salts/resources/language/English/strings.po
+++ b/plugin.video.salts/resources/language/English/strings.po
@@ -1514,3 +1514,15 @@ msgstr ""
 msgctxt "#30648"
 msgid "Show Custom Progress Dialog from Library"
 msgstr ""
+
+msgctxt "#30649"
+msgid "Create tvshow/movie nfo file for?"
+msgstr ""
+
+msgctxt "#30650"
+msgid "Won't scrape"
+msgstr ""
+
+msgctxt "#30651"
+msgid "All"
+msgstr ""
