Add 1.0.67 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,11 @@
+[B]Version 1.0.67[/B]
+- Fix 2movies scraper
+- Improve putlocker scraper
+- Fix dizimag scraper
+- Fix moviefarsi movie search
+- Fix mvl scraper
+- Increase allowed space for data column
+
 [B]Version 1.0.66[/B]
 - Minor settings fix
 - Fix afdah scraper
