--- a/plugin.video.salts/resources/language/English/strings.po
+++ b/plugin.video.salts/resources/language/English/strings.po
@@ -902,6 +902,14 @@ msgctxt "#30221"
 msgid "Filtering Out Unusable Sources"
 msgstr ""
 
+msgctxt "#30222"
+msgid "Include Links from Comments"
+msgstr ""
+
+msgctxt "#30223"
+msgid "My Watched History"
+msgstr ""
+
 msgctxt "#30500"
 msgid "Addon Theme"
 msgstr ""
@@ -1541,5 +1549,9 @@ msgstr ""
 
 msgctxt "#30655"
 msgid "Debrid"
+msgstr ""
+
+msgctxt "#30656"
+msgid "Show My Watched History"
 msgstr ""
 
