--- a/plugin.video.salts/resources/language/Dutch/strings.po
+++ b/plugin.video.salts/resources/language/Dutch/strings.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SALTS\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2015-10-29 09:43+0000\n"
-"Last-Translator: tknorris\n"
+"PO-Revision-Date: 2015-11-18 20:38+0000\n"
+"Last-Translator: Mike Bike\n"
 "Language-Team: Dutch (http://www.transifex.com/tv-addons/salts/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -209,6 +209,10 @@ msgstr "Dit zet een aantal instellingen naar waardes dewelke optimaal zijn"
 msgctxt "#30047"
 msgid "be effective. The following settings will be changed:"
 msgstr "bevonden. De volgende instellingen zullen veranderd worden:"
+
+msgctxt "#30048"
+msgid ""
+msgstr "[COLOR red]Scraper Volgorder, Bron Volgorder, Kalender start dag, Trakt Tijdslimiet, Scraper Tijdslimiet, Volglijst in MNE, Test Direct[/COLOR]"
 
 msgctxt "#30049"
 msgid "Go Back"
@@ -607,12 +611,12 @@ msgid "Scraper Automatically Disabled"
 msgstr "Scraper Automatisch Gedesactiveerd"
 
 msgctxt "#30148"
-msgid ""
-msgstr "De [COLOR blue]%s[/COLOR] scraper duurde te lang bij [COLOR red]%s%%[/COLOR] van %s aanvragen."
+msgid "[COLOR blue]%s[/COLOR] returned no results %s times in a row."
+msgstr "[COLOR blue]%s[/COLOR] toont geen resultaat %s keer achter elkaar."
 
 msgctxt "#30149"
-msgid "Each timeout wastes system resources and time."
-msgstr "Elke Tijdslimiet verkwist systeembronnen en tijd."
+msgid "This wastes system resources and time."
+msgstr "Dit verbruikt systeem geheugen en tijd."
 
 msgctxt "#30150"
 msgid ""
@@ -901,6 +905,42 @@ msgstr "%s Bronnen Ontvangen Van: %s"
 msgctxt "#30221"
 msgid "Filtering Out Unusable Sources"
 msgstr "Filteren van Onbruikbare Bronnen"
+
+msgctxt "#30222"
+msgid "Include Links from Comments"
+msgstr "Voeg Links toe van Reacties"
+
+msgctxt "#30223"
+msgid "My Watched History"
+msgstr "Mijn Bekeken Geschiedenis"
+
+msgctxt "#30224"
+msgid "Trying Sources for Auto-Play"
+msgstr "Bronen proberen voor Auto-Play"
+
+msgctxt "#30225"
+msgid "Trying: [%s] %s from %s"
+msgstr "Probeer: [%s] %s van de %s"
+
+msgctxt "#30226"
+msgid "Failed: [%s] %s from %s"
+msgstr "Gefaald: [%s] %s van de %s"
+
+msgctxt "#30227"
+msgid "Scraper Timeouts: [COLOR blue]%s[/COLOR]"
+msgstr "Bronnen buiten Tijdslimiet: [COLOR blue]%s[/COLOR]"
+
+msgctxt "#30228"
+msgid "Reset Failures"
+msgstr "Herstel Gefaalde"
+
+msgctxt "#30229"
+msgid "Maximum Source Results"
+msgstr "Maximaal Bron Resultaten"
+
+msgctxt "#30230"
+msgid "Include in My Next Episodes"
+msgstr "Invoegen in Mijn Volgende Afleveringen"
 
 msgctxt "#30500"
 msgid "Addon Theme"
@@ -1223,8 +1263,8 @@ msgid "Maximum Source Results (0=No Limit)"
 msgstr "Maximaal Bronnen (0=Geen Limiet)"
 
 msgctxt "#30580"
-msgid "Filter Top Unusable Sources (0=None)"
-msgstr "Filter Meest Onbruikbare Bronnen (0=Geen)"
+msgid "Filter Out Unusable Sources"
+msgstr "Filteren van Onbruikbare Bronnen"
 
 msgctxt "#30581"
 msgid "Source Exclusion List"
@@ -1247,8 +1287,8 @@ msgid "Match episode title when season & episode fails"
 msgstr "Gebruik aflevrings titel als seizoen & aflevering niet werkt"
 
 msgctxt "#30586"
-msgid "Automatically disable slow scrapers"
-msgstr "Automatisch annuleer langzame scrapers"
+msgid "Automatically disable ineffective scrapers"
+msgstr "Automatisch annuleer slechte scrapers"
 
 msgctxt "#30587"
 msgid "    Check Frequency (requests)"
@@ -1509,4 +1549,36 @@ msgstr "scraped niet"
 msgctxt "#30651"
 msgid "All"
 msgstr "Alles"
+
+msgctxt "#30652"
+msgid "Show Debrid Supported Sources in Green"
+msgstr "Toon Bronnen in Groen die gebruikt worden door Debrid "
+
+msgctxt "#30653"
+msgid "6th Sort Key"
+msgstr "6e Sorteer Key"
+
+msgctxt "#30654"
+msgid "6th Sort Key Order"
+msgstr "6e Sorteer key volgorde"
+
+msgctxt "#30655"
+msgid "Debrid"
+msgstr "Debrid"
+
+msgctxt "#30656"
+msgid "Show My Watched History"
+msgstr "Toon Mijn Bekeken Geschiedenis"
+
+msgctxt "#30657"
+msgid "    Consecutive Failure Level Limit"
+msgstr "Opeenvolgende Faal Level Limit"
+
+msgctxt "#30658"
+msgid "Mute Notifications"
+msgstr "Meldingen Uitschakelen"
+
+msgctxt "#30659"
+msgid "Exclude Completed, Ended Shows from My Next Episodes"
+msgstr "Seizoenen Uitsluiten, die Beëindigd zijn van Mijn Volgende Afleveringen "
 
