--- a/plugin.video.salts/resources/language/Polish/strings.po
+++ b/plugin.video.salts/resources/language/Polish/strings.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SALTS\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2015-10-29 09:43+0000\n"
+"PO-Revision-Date: 2015-11-18 08:24+0000\n"
 "Last-Translator: tknorris\n"
 "Language-Team: Polish (http://www.transifex.com/tv-addons/salts/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -27,6 +27,14 @@ msgctxt "#30026"
 msgid "Search"
 msgstr "Wyszukaj"
 
+msgctxt "#30064"
+msgid "Browse Seasons"
+msgstr "Przeglądaj sezon"
+
+msgctxt "#30096"
+msgid "TV"
+msgstr "Seriale"
+
 msgctxt "#30136"
 msgid "Remove from Collection"
 msgstr "Usuń z Kolekcji"
@@ -39,9 +47,17 @@ msgctxt "#30139"
 msgid "Add to Library"
 msgstr "Dodaj do Biblioteki"
 
+msgctxt "#30156"
+msgid "Start from beginning"
+msgstr "Zacznij od początku"
+
 msgctxt "#30157"
 msgid "Resume"
 msgstr "Wznów"
+
+msgctxt "#30174"
+msgid "Enabled"
+msgstr "Włączony"
 
 msgctxt "#30178"
 msgid "Password"
