--- a/plugin.video.salts/resources/language/Croatian/strings.po
+++ b/plugin.video.salts/resources/language/Croatian/strings.po
@@ -2,13 +2,14 @@
 # Addon id: plugin.video.salts
 # Addon Provider: TV Addons
 # Translators:
+# Ante Ruić <ante.ruic@st.htnet.hr>, 2015
 # Natko <natko_maniac@hotmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: SALTS\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2015-11-18 08:24+0000\n"
-"Last-Translator: tknorris\n"
+"PO-Revision-Date: 2015-11-27 20:20+0000\n"
+"Last-Translator: Ante Ruić <ante.ruic@st.htnet.hr>\n"
 "Language-Team: Croatian (http://www.transifex.com/tv-addons/salts/language/hr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -66,7 +67,7 @@ msgstr "Ukloni izvore iz cache memorije"
 
 msgctxt "#30012"
 msgid "Trending %s"
-msgstr "U porastu - %s"
+msgstr "U trendu - %s"
 
 msgctxt "#30013"
 msgid "Popular %s"
@@ -208,9 +209,13 @@ msgctxt "#30047"
 msgid "be effective. The following settings will be changed:"
 msgstr "efektivnima. Ove će postavke biti promijenjene:"
 
+msgctxt "#30048"
+msgid ""
+msgstr "[COLOR red]Redoslijed izvora, Sortiranje izvora, Početni dan Kalendara, Trakt Timeout, Timeout izvora, Watchlist u MNE, Direktan Test[/COLOR]"
+
 msgctxt "#30049"
 msgid "Go Back"
-msgstr "Povratak"
+msgstr "Idi natrag"
 
 msgctxt "#30050"
 msgid "Continue"
@@ -391,4 +396,452 @@ msgstr "Stavka uklonjena iz Kolekcije"
 msgctxt "#30094"
 msgid "Item Added to List"
 msgstr "Stavka dodana na Popis"
+
+msgctxt "#30095"
+msgid "List Copied: (A:%s/E:%s/S:%s)"
+msgstr "Popis je kopiran: (A:%s/E:%s/S:%s)"
+
+msgctxt "#30096"
+msgid "TV"
+msgstr "TV"
+
+msgctxt "#30097"
+msgid "Marked as %s"
+msgstr "Označeno kao %s"
+
+msgctxt "#30098"
+msgid "Updating Subscriptions..."
+msgstr "Ažuriranje pretplate ..."
+
+msgctxt "#30099"
+msgid "Next Update in %0.1f hours"
+msgstr "Sljedeći Ažuriranje je u % 0,1 f sati"
+
+msgctxt "#30100"
+msgid "Are you sure you want to delete the url cache?"
+msgstr "Jeste li sigurni da želite izbrisati url cache?"
+
+msgctxt "#30101"
+msgid "This will slow things down until all urls are re-cached"
+msgstr "To će usporiti stvari dok se svi URL-ovi ponovno ne spreme"
+
+msgctxt "#30102"
+msgid "Keep"
+msgstr "Zadrži"
+
+msgctxt "#30103"
+msgid "Delete"
+msgstr "Izbriši"
+
+msgctxt "#30104"
+msgid "Flush web cache"
+msgstr "Isperite web cashe"
+
+msgctxt "#30105"
+msgid "DB Reset Successful"
+msgstr "DB Ponovno postavljanje Uspješno"
+
+msgctxt "#30106"
+msgid "Reset only allowed on sqlite DBs"
+msgstr "Ponovno postavljanje dopušteno samo na sqlite DBs"
+
+msgctxt "#30107"
+msgid "Select Export Directory"
+msgstr "Odaberite  Directory za Izvoz"
+
+msgctxt "#30108"
+msgid "Enter Export Filename"
+msgstr "Unesite Naziv datoteke za Izvoz"
+
+msgctxt "#30109"
+msgid "Export Successful"
+msgstr "Izvoz uspio"
+
+msgctxt "#30110"
+msgid "Exported to %s"
+msgstr "Izvezi u %s"
+
+msgctxt "#30111"
+msgid "Export"
+msgstr "Izvoz"
+
+msgctxt "#30112"
+msgid "Export Failed"
+msgstr "Izvoz nije uspio"
+
+msgctxt "#30113"
+msgid "Select Import File"
+msgstr "Odaberite Uvoz datoteke"
+
+msgctxt "#30114"
+msgid "Import Success"
+msgstr "Uvoz uspio"
+
+msgctxt "#30115"
+msgid "Imported from %s"
+msgstr "Uvezeno od %s"
+
+msgctxt "#30116"
+msgid "Import"
+msgstr "Uvoz"
+
+msgctxt "#30117"
+msgid "Import Failed"
+msgstr "Uvoz nije uspio"
+
+msgctxt "#30118"
+msgid "Remove from List"
+msgstr "Ukloni s popisa"
+
+msgctxt "#30119"
+msgid "Subscribe"
+msgstr "Pretplatite se"
+
+msgctxt "#30120"
+msgid "Require Aired Only?"
+msgstr "Zahtijeva jedino emitirano?"
+
+msgctxt "#30121"
+msgid "Require Page Only?"
+msgstr "Zahtijeva jedino stranice?"
+
+msgctxt "#30122"
+msgid "Next Page"
+msgstr "Slijedeća stranica"
+
+msgctxt "#30123"
+msgid "Previous Week"
+msgstr "Prethodni tjedan"
+
+msgctxt "#30124"
+msgid "Next Week"
+msgstr "Sljedeći tjedan"
+
+msgctxt "#30125"
+msgid "Mark as Unwatched"
+msgstr "Označi kao nepogledan"
+
+msgctxt "#30126"
+msgid "Mark as Watched"
+msgstr "Označi kao pogledan"
+
+msgctxt "#30127"
+msgid "Rate on trakt.tv"
+msgstr "Ocijeni na trakt.tv"
+
+msgctxt "#30128"
+msgid "Set as Season View"
+msgstr "Postavi kao pregled sezone"
+
+msgctxt "#30129"
+msgid "Unavailable"
+msgstr "Nedostupno"
+
+msgctxt "#30130"
+msgid "Select Source"
+msgstr "Odaberite izvor"
+
+msgctxt "#30131"
+msgid "Download Source"
+msgstr "Preuzmi izvor"
+
+msgctxt "#30132"
+msgid "Show Information"
+msgstr "Prikaži informacije"
+
+msgctxt "#30133"
+msgid "Add Show to List"
+msgstr "Dodaj Seriju na popis"
+
+msgctxt "#30134"
+msgid "Set Related Show Url (Search)"
+msgstr "Postavite Srodnu Seriju Url (Traži)"
+
+msgctxt "#30135"
+msgid "Set Related Url (Manual)"
+msgstr "Postavite Srodni Url (Ručno)"
+
+msgctxt "#30136"
+msgid "Remove from Collection"
+msgstr "Ukloni iz Zbirke"
+
+msgctxt "#30137"
+msgid "Add to Collection"
+msgstr "Dodaj u zbirku"
+
+msgctxt "#30138"
+msgid "Add to List"
+msgstr "Dodaj na popis"
+
+msgctxt "#30139"
+msgid "Add to Library"
+msgstr "Dodaj u biblioteku"
+
+msgctxt "#30140"
+msgid "Set Addic7ed TVShowID"
+msgstr "Postavi pripadajući TVShowID"
+
+msgctxt "#30141"
+msgid "Use Default episode matching"
+msgstr "Koristi zadana podudaranja epizoda"
+
+msgctxt "#30142"
+msgid "Use Episode Title matching"
+msgstr "Koristite podudaranja Naslova Epizode "
+
+msgctxt "#30143"
+msgid "Set Related Url (Search)"
+msgstr "Postavite Srodni Url (Traži)"
+
+msgctxt "#30144"
+msgid "Play Trailer"
+msgstr "Pokreni najavu"
+
+msgctxt "#30145"
+msgid "Pick a list"
+msgstr "Odaberite popis"
+
+msgctxt "#30146"
+msgid "No Lists exist for user: %s"
+msgstr "Ne postoje popisi za korisnika: %s"
+
+msgctxt "#30147"
+msgid "Scraper Automatically Disabled"
+msgstr "Izvor automatski onemogućen"
+
+msgctxt "#30148"
+msgid "[COLOR blue]%s[/COLOR] returned no results %s times in a row."
+msgstr "[COLOR plavo]%s[/COLOR] vraćeno bez rezultata %s puta za redom."
+
+msgctxt "#30149"
+msgid "This wastes system resources and time."
+msgstr "To troši vrijeme i resurse sustava."
+
+msgctxt "#30151"
+msgid "Keep Enabled"
+msgstr "Držite Omogućeno"
+
+msgctxt "#30152"
+msgid "Disable It"
+msgstr "Onemogućite to"
+
+msgctxt "#30153"
+msgid "Trakt Bookmark Exists"
+msgstr "Postoje Trakt Oznake"
+
+msgctxt "#30154"
+msgid "Local Bookmark Exists"
+msgstr "Postoje Lokalne Oznake"
+
+msgctxt "#30155"
+msgid "Resume from %s"
+msgstr "Nastavi od %s"
+
+msgctxt "#30156"
+msgid "Start from beginning"
+msgstr "Počnite od početka"
+
+msgctxt "#30157"
+msgid "Resume"
+msgstr "Nastavi"
+
+msgctxt "#30158"
+msgid "Downloading: %s..."
+msgstr "Skidanje: %s..."
+
+msgctxt "#30159"
+msgid "Download Complete: %s"
+msgstr "Skidanje gotovo: %s"
+
+msgctxt "#30160"
+msgid "Error (%s) during download: %s"
+msgstr "Greška (%s) tijekom skidanja: %s"
+
+msgctxt "#30161"
+msgid "Trakt Account Authorization"
+msgstr "Autorizacija Trakt računa"
+
+msgctxt "#30162"
+msgid "To authorize SALTS to access your trakt.tv account:"
+msgstr "Ovlastite SALTS za pristup vašem računu trakt.tv:"
+
+msgctxt "#30163"
+msgid ""
+msgstr "1) Posjeti [COLOR nebesko plava]http://trakt.tv/pin/347[/COLOR]"
+
+msgctxt "#30164"
+msgid "2) If prompted, authorize SALTS to access your account."
+msgstr "2) Ako je potrebno, ovlasti SALTS za pristup tvom računu."
+
+msgctxt "#30165"
+msgid "3) Enter the PIN provided in the box below."
+msgstr "3) Unesite PIN naveden u okviru ispod."
+
+msgctxt "#30166"
+msgid ""
+msgstr "SALTS se može koristiti bez trakt.tv račun, ali da u potpunosti iskoriste SALTS treba ga ovlastiti za pristup vašem trakt.tv račun."
+
+msgctxt "#30167"
+msgid "Authorize"
+msgstr "Autorizirajte"
+
+msgctxt "#30168"
+msgid "Remind Me Later"
+msgstr "Podsjeti me kasnije"
+
+msgctxt "#30169"
+msgid "No Thanks"
+msgstr "Ne hvala"
+
+msgctxt "#30170"
+msgid "Trakt.tv PIN Authorization Failed"
+msgstr "Trakt.tv PIN autorizacija nije uspjela"
+
+msgctxt "#30171"
+msgid "You will be reminded in 24 hours"
+msgstr "Podsjetit će vas tijekom  24 sata"
+
+msgctxt "#30172"
+msgid "Use Addon Settings later if you change your mind"
+msgstr "Koristite Postavke dodatka kasnije ako se predomislite"
+
+msgctxt "#30173"
+msgid "Trakt Authorization Complete"
+msgstr "Trakt Autorizacija završena"
+
+msgctxt "#30174"
+msgid "Enabled"
+msgstr "Omogućeno"
+
+msgctxt "#30175"
+msgid "Base Url"
+msgstr "Bazni Url"
+
+msgctxt "#30176"
+msgid "Include in Page Existence checks?"
+msgstr "Uključiti u provjeru postojanja stranice"
+
+msgctxt "#30177"
+msgid "Username"
+msgstr "Korisničko ime"
+
+msgctxt "#30178"
+msgid "Password"
+msgstr "Lozinka"
+
+msgctxt "#30179"
+msgid "Filter results older than (0=No Filter) (days)"
+msgstr "Filtriranje Rezultata starije od (0 = bez filtera) (dana)"
+
+msgctxt "#30180"
+msgid "Automatically Select"
+msgstr "Automatski odabir"
+
+msgctxt "#30181"
+msgid "Include Premium"
+msgstr "Uključi Premium"
+
+msgctxt "#30182"
+msgid "Maximum Pages"
+msgstr "Maksimalan broj stranica"
+
+msgctxt "#30183"
+msgid "No Sources Found"
+msgstr "Nema pronađenih Izvora"
+
+msgctxt "#30184"
+msgid "Season"
+msgstr "Sezona"
+
+msgctxt "#30185"
+msgid "DISABLED"
+msgstr "Onesposobljen"
+
+msgctxt "#30186"
+msgid "Search"
+msgstr "Pretraga"
+
+msgctxt "#30187"
+msgid "Watched"
+msgstr "Gledano"
+
+msgctxt "#30188"
+msgid "Unwatched"
+msgstr "Nepogledano"
+
+msgctxt "#30189"
+msgid "Updating"
+msgstr "Ažuriranje"
+
+msgctxt "#30190"
+msgid "Failed to create directory"
+msgstr "Neuspješna izrada direktorija"
+
+msgctxt "#30191"
+msgid "Failed to write file"
+msgstr "Neuspjelo pisanje datoteke"
+
+msgctxt "#30192"
+msgid "Reset All Scraper Base Urls to Default"
+msgstr "Ponovno postavljanje Svih bazičnih Url-ova Izvora na Početno"
+
+msgctxt "#30193"
+msgid "Base Url Reset Complete"
+msgstr "Ponovno postavljanje Svih bazičnih Url-ova Izvora završeno"
+
+msgctxt "#30194"
+msgid "Requesting Url for: %s"
+msgstr "Traženje Url za: %s"
+
+msgctxt "#30195"
+msgid "'%s' added to library"
+msgstr "%s' dodaje se biblioteci"
+
+msgctxt "#30196"
+msgid "Add to Section Menu"
+msgstr "Dodaj u Odjeljak izbornika"
+
+msgctxt "#30197"
+msgid "Remove from Section Menu"
+msgstr "Makni iz Odjeljka izbornika"
+
+msgctxt "#30198"
+msgid "Liked Lists"
+msgstr "Pozitivno ocijenjeni popisi"
+
+msgctxt "#30199"
+msgid "%s Mosts"
+msgstr "%s većine"
+
+msgctxt "#30200"
+msgid "Most Played This Week"
+msgstr "Najčešće reproduciranih ovaj tjedan"
+
+msgctxt "#30201"
+msgid "Most Played This Month"
+msgstr "Najčešće reproduciranih ovog mjeseca"
+
+msgctxt "#30202"
+msgid "Most Played All Time"
+msgstr "Najčešće reproduciranih svih vremena"
+
+msgctxt "#30203"
+msgid "Most Watched This Week"
+msgstr "Najgledaniji ovaj tjedan"
+
+msgctxt "#30204"
+msgid "Most Watched This Month"
+msgstr "Najgledanijih ovog mjeseca"
+
+msgctxt "#30205"
+msgid "Most Watched All Time"
+msgstr "Najgledaniji svih vremena"
+
+msgctxt "#30612"
+msgid "Base Url"
+msgstr "Bazni Url"
+
+msgctxt "#30613"
+msgid "Include in Page Existence checks?"
+msgstr "Uključiti u provjeru postojanja stranice"
 
