--- a/context.salts.tools/changelog.txt
+++ b/context.salts.tools/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 0.0.4[/B]
+- Strip (XXXX) off movie & tvshow titles
+
 [B]Version 0.0.3[/B]
 - Switch between Select Source and Auto-Play based on current auto-play setting 
 
